--- a/index.html
+++ b/index.html
@@ -99,17 +99,17 @@
           <img
             class="image_3 equal-division-item"
             src="https://codefun-proj-user-res-1256085488.cos.ap-guangzhou.myqcloud.com/6524d7985a7e3f0310ba9e54/652546e1ce83440011a25324/16969418263293826808.png"
-            onclick="location.href='../Chat_group_2/Chat_group_2.html'"
+            onclick="location.href='./pages/Chat_group_2/Chat_group_2.html'"
           />
           <img
             class="image_3 equal-division-item"
             src="https://codefun-proj-user-res-1256085488.cos.ap-guangzhou.myqcloud.com/64f80c005a7e3f03102934ae/6534a947f9a7df00121f1ddf/16979500335725718709.png"
-            onclick="location.href='../restaurant/restaurant.html'"
+            onclick="location.href='./pages/restaurant/restaurant.html'"
           />
           <img
             class="image_3 equal-division-item"
             src="https://codefun-proj-user-res-1256085488.cos.ap-guangzhou.myqcloud.com/64f80c005a7e3f03102934ae/6534a947f9a7df00121f1ddf/16979500335724410069.png"
-            onclick="location.href='../Shopping_cart_1/Shopping_cart_1.html'"
+            onclick="location.href='./pages/Shopping_cart_1/Shopping_cart_1.html'"
           />
         </div>
         <div class="flex-row justify-center items-center relative group">
