--- a/pages/Shopping_cart_1/Shopping_cart_1.html
+++ b/pages/Shopping_cart_1/Shopping_cart_1.html
@@ -47,8 +47,7 @@
           <span class="self-start font_1 text_2">Tomato <p style="position: absolute; right: 20px; top: 15px;">-  8  +</p></span>
         </div>
       </div>
-      <div style="position: absolute; bottom: 0; right: 0; left: 0;">
-      <div class="flex-col">
+      <div class="flex-col" style="position: absolute; bottom: 0; right: 0; left: 0;">
         <div class="flex-row equal-division">
           <div class="flex-col items-center equal-division-item section_3 space-y-6" onclick="location.href='../Delivery_Process_1/Delivery_Process_1.html'">
             <span class="font_2">$128,00</span>
@@ -91,7 +90,6 @@
               src="https://i.ibb.co/f9ctSrT/shopping-cart.png"
             />
             <span class="self-center font_4" style="color: #80b623;">Cart</span>
-          </div>
           </div>
         </div>
       </div>
