--- a/pages/restaurant_map/rest1.html
+++ b/pages/restaurant_map/rest1.html
@@ -11,9 +11,11 @@
           <div class="flex-row items-center relative section space-x-14" 
           style="padding: 9px 0px;
                 position: absolute;
-                top: 20px;
+                top: 52px;
                 left: 0;
-                right: 0;">
+                right: 0;
+                background: white;
+                height: 70px;">
             <img
               class="shrink-0 image"
               src="https://codefun-proj-user-res-1256085488.cos.ap-guangzhou.myqcloud.com/6524d7985a7e3f0310ba9e54/652546e1ce83440011a25324/16978584988148622249.png"
@@ -35,6 +37,6 @@
     width="393" height="752" style="border:0; position: absolute; bottom: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
     </iframe> -->
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3538.9373539732965!2d153.00372057511117!3d-27.502323676300623!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b9150877ac66e4f%3A0x6da6b15b953c4880!2sThai%20Nakonlanna!5e0!3m2!1sen!2sau!4v1698199849768!5m2!1sen!2sau"
-     width="393" height="752" style="border:0; position: absolute; bottom: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+     width="393" height="742" style="border:0; position: absolute; bottom: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 </html>
