--- a/pages/shopping/shopping.html
+++ b/pages/shopping/shopping.html
@@ -78,7 +78,7 @@
             src="https://codefun-proj-user-res-1256085488.cos.ap-guangzhou.myqcloud.com/64f80c005a7e3f03102934ae/6534a947f9a7df00121f1ddf/16979500380129567535.png"
           />
         </div>        
-        <div class="flex-row justify-between items-center section_5" onclick="location.href='../counter/counterList.html'">
+        <div class="flex-row justify-between items-center section_5" style="margin-bottom: 100px;" onclick="location.href='../counter/counterList.html'">
           <div class="flex-row items-center space-x-20">
             <div class="flex-col justify-start items-end shrink-0 section_36"><div class="section_4"></div></div>
             <span class="font_1">Fruit</span>
