--- a/pages/restaurant_map/rest2.html
+++ b/pages/restaurant_map/rest2.html
@@ -9,11 +9,14 @@
     <div class="flex-col page">
         <div class="flex-col">
           <div class="flex-row items-center relative section space-x-14" 
-          style="padding: 9px 0px;
+          style="z-index: 1;
+                padding: 9px 0px;
                 position: absolute;
-                top: 20px;
+                top: 5px;
                 left: 0;
-                right: 0;">
+                right: 0;
+                background: white;
+                height: 30px;">>
             <img
               class="shrink-0 image"
               src="https://codefun-proj-user-res-1256085488.cos.ap-guangzhou.myqcloud.com/6524d7985a7e3f0310ba9e54/652546e1ce83440011a25324/16978584988148622249.png"
@@ -32,7 +35,7 @@
      width="393" height="752" style="border:0; position: absolute; bottom: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
     -->
      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3539.7518364245293!2d153.01057567511015!3d-27.47698427631538!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b9150a74972438d%3A0xb125a0e5e1135fa4!2sOkuman%20Karaage%20%26%20Ramen%20Bar!5e0!3m2!1sen!2sau!4v1698199910009!5m2!1sen!2sau"
-      width="393" height="752" style="border:0; position: absolute; bottom: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      width="393" height="676" style="border:0; position: absolute; bottom: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </iframe>
 </body>
 </html>
