--- a/pages/restaurant_map/rest4.html
+++ b/pages/restaurant_map/rest4.html
@@ -9,11 +9,14 @@
     <div class="flex-col page">
         <div class="flex-col">
           <div class="flex-row items-center relative section space-x-14" 
-          style="padding: 9px 0px;
+          style="z-index: 1;
+                padding: 9px 0px;
                 position: absolute;
-                top: 20px;
+                top: 5px;
                 left: 0;
-                right: 0;">
+                right: 0;
+                background: white;
+                height: 30px;">>
             <img
               class="shrink-0 image"
               src="https://codefun-proj-user-res-1256085488.cos.ap-guangzhou.myqcloud.com/6524d7985a7e3f0310ba9e54/652546e1ce83440011a25324/16978584988148622249.png"
@@ -32,6 +35,6 @@
      width="393" height="752" style="border:0; position: absolute; bottom: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
     </iframe>-->
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3540.1182551651427!2d153.01042027510965!3d-27.46557757632196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b91598da6328f77%3A0x965b8ae133a22522!2sPilgrim%20Brisbane!5e0!3m2!1sen!2sau!4v1698200023204!5m2!1sen!2sau"
-     width="393" height="752" style="border:0; position: absolute; bottom: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+     width="393" height="676" style="border:0; position: absolute; bottom: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 </html>
