--- a/pages/food_box/Food_box.html
+++ b/pages/food_box/Food_box.html
@@ -31,7 +31,7 @@
               class="shrink-0 image_3"
               src="https://codefun-proj-user-res-1256085488.cos.ap-guangzhou.myqcloud.com/6524d7985a7e3f0310ba9e54/652546e1ce83440011a25324/16978585025566292550.png"
             />
-            <span class="font_1 text_2">Food Box 1</span>
+            <span class="font_1 text_2">Mediterranean</span>
           </div>
           <img
             class="image_2"
@@ -47,7 +47,7 @@
                 class="shrink-0 image_3"
                 src="https://codefun-proj-user-res-1256085488.cos.ap-guangzhou.myqcloud.com/6524d7985a7e3f0310ba9e54/652546e1ce83440011a25324/16978585025566292550.png"
               />
-              <span class="font_1">Food Box 2</span>
+              <span class="font_1">vegetarian</span>
             </div>
             <img
               class="self-start image_2 image_4"
@@ -61,7 +61,7 @@
                   class="shrink-0 image_3"
                   src="https://codefun-proj-user-res-1256085488.cos.ap-guangzhou.myqcloud.com/6524d7985a7e3f0310ba9e54/652546e1ce83440011a25324/16978585025566292550.png"
                 />
-                <span class="font_1">Food Box 3</span>
+                <span class="font_1">Light meal</span>
               </div>
               <img
                 class="image_2"
@@ -75,7 +75,7 @@
                 class="shrink-0 image_3"
                 src="https://codefun-proj-user-res-1256085488.cos.ap-guangzhou.myqcloud.com/6524d7985a7e3f0310ba9e54/652546e1ce83440011a25324/16978585025566292550.png"
               />
-              <span class="font_1 text_3">Food Box 4</span>
+              <span class="font_1 text_3">Max Box</span>
             </div>
             <img
               class="image_2"
